alterei o README.md

--- a/index.html
+++ b/index.html
@@ -41,6 +41,6 @@
     </ol>
 
     <h3>Agradecimentos</h3>
-    <p><blockquote><small>Obrigado por  grege visitar o meu site. Espero que isso seja útil. Se precisar de mais alguma coisa, estarei por aqui!</small></blockquote></p>
+    <p><blockquote><small>Obrigado por visitar o meu site. Espero que isso seja útil. Se precisar de mais alguma coisa, estarei por aqui!</small></blockquote></p>
 </body>
 </html>
